--- a/locales/en/faq.json
+++ b/locales/en/faq.json
@@ -21,7 +21,11 @@
           "answer": "We love hearing interesting ideas! Call us or email us to discuss the details and we'll do our best to accommodate your request."
         },
         {
-          "question": "What ingredients do you use?",
+          "question": "Can you blend alcoholic cocktails for weddings or private parties?",
+          "answer": "Yes, absolutely! We can blend delicious alcoholic cocktails for weddings and private events. For private corporate events where alcohol is served for free, no special permit is required in Quebec. If the event takes place at a licensed venue (restaurant, banquet hall), their permit covers alcohol service. We take care of all legal aspects to ensure everything is compliant and safe."
+        },
+        {
+          "question": "What ingredients do you uw&se?",
           "answer": "We use only fresh fruits, organic vegetables, and natural ingredients. We can accommodate food allergies and dietary preferences with advance notice."
         },
         {
@@ -35,10 +39,6 @@
         {
           "question": "Can customers make their own drinks?",
           "answer": "Yes! We encourage all our customers to make their own drinks - we think it's more fun and engaging that way. Almost everyone can use the blender bikes - children as young as four, teenagers, adults, and even active seniors can comfortably use our fantastic blender bikes. Our staff are also enthusiastic cyclists if you'd like us to give you a hand (or leg) at any time."
-        },
-        {
-          "question": "Can you blend alcoholic cocktails for weddings or private parties?",
-          "answer": "Yes, absolutely! We can blend delicious alcoholic cocktails for weddings and private events. We also take care of obtaining the necessary alcohol permit from Quebec to ensure everything is legal and safe."
         },
         {
           "question": "What happens if it rains?",
