--- a/locales/fr/contact.json
+++ b/locales/fr/contact.json
@@ -56,6 +56,7 @@
         }
       },
       "eventDate": "Date d'événement",
+      "dateFormat": "jj/mm/aaaa",
       "guests": {
         "label": "Nombre d'invités",
         "placeholder": "Sélectionnez",
