--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -1,8 +1,8 @@
 {
   "hero": {
-    "title": "Fresh and healthy smoothies, produced by pedal power!",
-    "subtitle": "Smoothie service for your corporate and private events in Quebec",
-    "ctaButton": "BOOK NOW"
+    "title": "Fresh Smoothies, Powered by Pedals",
+    "subtitle": "Eco-friendly bike blenders for unforgettable events",
+    "ctaButton": "Book Now"
   },
   "valueProposition": {
     "title": "Transform your event with our smoothie bikes",
