--- a/locales/fr/home.json
+++ b/locales/fr/home.json
@@ -1,8 +1,8 @@
 {
   "hero": {
-    "title": "Voilà Vélo",
-    "subtitle": "Service de smoothies pour vos événements corporatifs et privés au Québec",
-    "ctaButton": "Réserver maintenant"
+    "title": "Smoothies Frais, Propulsés à Vélo",
+    "subtitle": "Mélangeurs écologiques pour des événements inoubliables",
+    "ctaButton": "Réserver"
   },
   "valueProposition": {
     "title": "Transformez votre événement avec nos vélos à smoothies",
