--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -207,7 +207,7 @@
       },
       "foodWaste": {
         "title": "Fighting\nFood Waste!",
-        "description": "We donate all leftover ingredients to charities like Moisson Montreal"
+        "description": "We donate all leftover ingredients to people in need"
       },
       "equality": {
         "title": "Fighting\nInequality!",
