--- a/locales/en/about.json
+++ b/locales/en/about.json
@@ -16,7 +16,7 @@
   "founders": {
     "title": "Our Founders",
     "subtitle": "Leen and Micha",
-    "description": "We are Leen and Micha — two sisters with a great love for nature, healthy living, and cycling. That's how Voilà Vélo Fruité came to be — a joyful concept where people of all ages can hop on a smoothie bike, pedal with all their heart, and create their own delicious drink, powered entirely by their energy! We believe in spreading positivity, promoting wellness, and getting everyone involved — no matter how young or old. Whether it's at a school event, a festival, or a corporate gathering, Voilà Vélo brings fun, flavor, and feel-good vibes to every occasion.",
+    "description": "We're Leen and Micha — two sisters with a big love for nature, healthy living, and biking. That's how Voilà Vélo Fruité came to life — a joyful concept where people of all ages can hop on a smoothie bike, pedal their hearts out, and create their own delicious drink, powered entirely by their energy! We believe in spreading positivity, promoting wellness, and getting everyone involved — no matter how young or old. Whether it's at a school event, a festival, or a corporate gathering, Voilà Vélo brings fun, flavor, and feel-good vibes to every occasion.",
     "button": "Learn More"
   },
   "mission": {
